# op_energy_db

klange_server/: .gitignore  README.md  TODO.txt  do_make_install.sh
klange_server/cgiserver/: CMakeLists.txt  cgiserver  cgiserver.c
klange_server/dev_cgi/: Calculate_Hashes_per_Satoshi.html  aconcagua.py  calcops_c3.py  form_zero.html
pg_repo/: README.md  btc_hist_histprice_usd.sql  btc_hist_schemaonly.sql  btcdata_1600585200.tgz.md5sum  btcdata_1600585200.tgz.sha256  btcdata_1600585200_small.tgz.md5sum  calculate_energy_price.txt  do_make_base_tables.py  import_base_tables.py  import_from_blockchain.sh  import_from_pg_backup.sh  utils_misc.py
pg_repo/datafetch/: README.md
